--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-09-02 17:58+0000\n"
+"PO-Revision-Date: 2010-09-07 15:49+0000\n"
 "Last-Translator: Luis Fernando Rigato Vasconcellos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-02 21:08+0000\n"
+"X-Launchpad-Export-Date: 2010-09-07 16:48+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
@@ -45,13 +45,15 @@ msgstr "Chegada depois do pôr do sol"
 
 #: src/ConditionMonitor.cpp:337
 msgid "Expect early task arrival"
-msgstr ""
+msgstr "Chegada da prova antes do esperado"
 
 #: src/ConditionMonitor.cpp:391
 msgid ""
 "Start rules slightly violated\r\n"
 "but within margin"
 msgstr ""
+"Leve violação das regras de largada\r\n"
+"mas dentro da margem"
 
 #: src/ConditionMonitor.cpp:393
 msgid "Start rules violated"
@@ -125,7 +127,7 @@ msgstr ""
 
 #: src/Gauge/FlarmTrafficWindow.cpp:252
 msgid "No Traffic"
-msgstr ""
+msgstr "Sem tráfego"
 
 #: src/AirfieldDetails.cpp:158
 msgid "Loading Airfield Details File..."
@@ -158,7 +160,7 @@ msgstr "Ponto de pouso anterior"
 
 #: src/ExpandMacros.cpp:169
 msgid "Finish turnpoint"
-msgstr ""
+msgstr "Ponto de chegada"
 
 #: src/ExpandMacros.cpp:179
 msgid "Start turnpoint"
@@ -170,11 +172,11 @@ msgstr ""
 
 #: src/ExpandMacros.cpp:188 src/ExpandMacros.cpp:194
 msgid "Previous waypoint"
-msgstr ""
+msgstr "Ponto de virada anterior"
 
 #: src/ExpandMacros.cpp:380
 msgid "Topology on"
-msgstr ""
+msgstr "Mostrar topologia"
 
 #: src/ExpandMacros.cpp:384
 msgid "Terrain on"
@@ -202,6 +204,10 @@ msgid ""
 "only: in simulation mode, this value is adjustable with the up/down arrow "
 "keys and the right/left arrow keys also cause the glider to turn."
 msgstr ""
+"Altura acima do nível médio do mar reportada pelo GPS. Somente Touchscreen e "
+"PC: em modo de simulação, este valor é\r\n"
+"ajustável com as teclas para cima/para baixo. As teclas esquerda/direit "
+"também fazem o planador virar."
 
 #: src/InfoBoxes/Content/Factory.cpp:78
 msgid "Height AGL"
@@ -240,7 +246,7 @@ msgstr ""
 #: Data/Dialogs/dlgWayPointDetails.xml:18
 #: Data/Dialogs/dlgWayPointDetails_L.xml:18
 msgid "Bearing"
-msgstr ""
+msgstr "Proa"
 
 #: src/InfoBoxes/Content/Factory.cpp:96
 msgid ""
@@ -252,11 +258,11 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:102
 msgid "L/D instantaneous"
-msgstr ""
+msgstr "L/D instantâneo"
 
 #: src/InfoBoxes/Content/Factory.cpp:103
 msgid "L/D Inst"
-msgstr ""
+msgstr "L/D Inst"
 
 #: src/InfoBoxes/Content/Factory.cpp:104
 msgid ""
@@ -265,14 +271,18 @@ msgid ""
 "climbing cruise. If the vertical speed is close to zero, the displayed value "
 "is '---'."
 msgstr ""
+"Razão de planeio instantânea, dada pela velocidade no solo dividida pela "
+"velocidade vertical (GPS) nos últimos 20 segundos.\r\n"
+"Valores negativos indicam subida. Se a velocidade vertical é próxima de zero "
+"o valor mostrado é '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:110
 msgid "L/D cruise"
-msgstr ""
+msgstr "L/D de cruzeiro"
 
 #: src/InfoBoxes/Content/Factory.cpp:111
 msgid "L/D Cru"
-msgstr ""
+msgstr "L/D Cruz"
 
 #: src/InfoBoxes/Content/Factory.cpp:112
 msgid ""
@@ -281,6 +291,10 @@ msgid ""
 "(height gain since leaving the last thermal). If the vertical speed is close "
 "to zero, the displayed value is '---'."
 msgstr ""
+"Distância do topo da última térmica dividida pela perda de altitude. Valores "
+"negativos indicam subida (ganho de altura desde que\r\n"
+"a última térmica foi deixada). Se a velocidade vertical é próxima de zero o "
+"valor mostrado é '---'."
 
 #: src/InfoBoxes/Content/Factory.cpp:118
 msgid "Speed ground"
@@ -296,6 +310,10 @@ msgid ""
 "mode, pressing the up and down arrows adjusts the speed, and left and right "
 "turn the glider."
 msgstr ""
+"Velocidade no solo medida pelo GPS. Se este InfoBox estiver ativo no modo de "
+"simulação, pressionar a tecla\r\n"
+"para baixo/para cima ajusta a velocidade. A tecla direita/esquerda gira o "
+"planador."
 
 #: src/InfoBoxes/Content/Factory.cpp:126
 msgid "Last Thermal Average"
@@ -309,7 +327,7 @@ msgstr ""
 msgid ""
 "Total altitude gain/loss in the last thermal divided by the time spent "
 "circling."
-msgstr ""
+msgstr "Ganho/perda de altitude na última térmica divido pelo tempo girando."
 
 #: src/InfoBoxes/Content/Factory.cpp:134
 msgid "Last Thermal Gain"
@@ -333,7 +351,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:144
 msgid "Time spent circling in the last thermal."
-msgstr ""
+msgstr "Tempo girando na última térmica"
 
 #: src/InfoBoxes/Content/Factory.cpp:150
 msgid "MacCready Setting"
@@ -452,7 +470,7 @@ msgstr "Velocidade média na prova"
 
 #: src/InfoBoxes/Content/Factory.cpp:207
 msgid "V Task Av"
-msgstr ""
+msgstr "V Média Prova"
 
 #: src/InfoBoxes/Content/Factory.cpp:208
 msgid ""
@@ -490,50 +508,60 @@ msgid ""
 "finish by the excess energy height of the glider if its true airspeed is "
 "greater than the MacCready and best LD speeds."
 msgstr ""
+"Razão de planeio necessária para completar a prova. É a distância restante "
+"dividida pela altura necessária para completar a prova, descontada a altura "
+"de segurança. Valores negativos indicam que é necessário subir para terminar "
+"a prova. Se a altura requerida for próxima de zero, o valor mostrado será '--"
+"-'. Esse cálculo pode ser otimista porque compensa a altura requerida para "
+"completar a prova pelo excesso de energia do planador se a velocidade "
+"verdadeira for maior que as velocidades de MacCready e de melhor planeio."
 
 #: src/InfoBoxes/Content/Factory.cpp:230
 msgid "Terrain Elevation"
-msgstr ""
+msgstr "Elevação do terreno"
 
 #: src/InfoBoxes/Content/Factory.cpp:231
 msgid "H GND"
-msgstr ""
+msgstr "A Solo"
 
 #: src/InfoBoxes/Content/Factory.cpp:232
 msgid ""
 "This is the elevation of the terrain above mean sea level, obtained from the "
 "terrain file at the current GPS location."
 msgstr ""
+"Elevação do terreno acima do nível médio do mar, obtida do arquivo de "
+"terreno na atual localização do GPS."
 
 #: src/InfoBoxes/Content/Factory.cpp:238
 msgid "Thermal Average"
-msgstr ""
+msgstr "Térmica Média"
 
 #: src/InfoBoxes/Content/Factory.cpp:239
 msgid "TC Avg"
-msgstr ""
+msgstr "TM Média"
 
 #: src/InfoBoxes/Content/Factory.cpp:240
 msgid ""
 "Altitude gained/lost in the current thermal, divided by time spent "
 "thermaling."
 msgstr ""
+"Ganho/perda de altitude na térmica atual dividido pelo tempo girando."
 
 #: src/InfoBoxes/Content/Factory.cpp:246
 msgid "Thermal Gain"
-msgstr ""
+msgstr "Ganho na térmica"
 
 #: src/InfoBoxes/Content/Factory.cpp:247
 msgid "TC Gain"
-msgstr ""
+msgstr "TM Ganho"
 
 #: src/InfoBoxes/Content/Factory.cpp:248
 msgid "The altitude gained/lost in the current thermal."
-msgstr ""
+msgstr "Ganho;perda de altitude na térmica atual."
 
 #: src/InfoBoxes/Content/Factory.cpp:254 src/InfoBoxes/Content/Factory.cpp:255
 msgid "Track"
-msgstr ""
+msgstr "Proa"
 
 #: src/InfoBoxes/Content/Factory.cpp:256
 msgid ""
@@ -541,27 +569,31 @@ msgid ""
 "active in simulation mode, pressing the up and down  arrows adjusts the "
 "track."
 msgstr ""
+"Proa magnética reportada pelo GPS. (somente Touchscreen e PC) No modo de "
+"simulação, a tecla para baixo/para cima ajusta a proa."
 
 #: src/InfoBoxes/Content/Factory.cpp:262 src/InfoBoxes/Content/Factory.cpp:263
 #: Data/Dialogs/dlgFlarmTrafficDetails.xml:14
 #: Data/Dialogs/dlgFlarmTrafficDetails_L.xml:14 Data/Dialogs/dlgStatus.xml:22
 #: Data/Dialogs/dlgStatusSystem.xml:6
 msgid "Vario"
-msgstr ""
+msgstr "Vario"
 
 #: src/InfoBoxes/Content/Factory.cpp:264
 msgid ""
 "Instantaneous vertical speed, as reported by the GPS, or the intelligent "
 "vario total energy vario value if connected to one."
 msgstr ""
+"Velocidade vertical instantânea, reportada pelo GPS, ou pela energia total "
+"de um variômetro eletrônico, se conectado."
 
 #: src/InfoBoxes/Content/Factory.cpp:270
 msgid "Wind Speed"
-msgstr ""
+msgstr "Velocidade do vento"
 
 #: src/InfoBoxes/Content/Factory.cpp:271
 msgid "Wind V"
-msgstr ""
+msgstr "V Vento"
 
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
@@ -571,14 +603,20 @@ msgid ""
 "Pressing the enter cursor key saves the wind value as the initial value when "
 "XCSoar next starts."
 msgstr ""
+"Velocidade do vento estimada pelo XCSoar. (Somente Touchscreen e PC) É "
+"possivel ajustar a magnitude do vento por meio\r\n"
+"da tecla para baixo/para cima e a direção do vento por meio da tecla "
+"direita/esquerda enquanto o InfoBox estiver ativo.\r\n"
+"Pressionando a tecla enter salva as informações de vento como o valor "
+"inicial quando o XCSoar é iniciado."
 
 #: src/InfoBoxes/Content/Factory.cpp:278
 msgid "Wind Bearing"
-msgstr ""
+msgstr "Direção do vento"
 
 #: src/InfoBoxes/Content/Factory.cpp:279
 msgid "Wind B"
-msgstr ""
+msgstr "Dir Vento"
 
 #: src/InfoBoxes/Content/Factory.cpp:280
 msgid ""
@@ -586,53 +624,59 @@ msgid ""
 "possible by pressing the up/down cursor keys to adjust bearing when the "
 "infobox is active."
 msgstr ""
+"Direção do vento estimada pelo XCSoar. (Somente Toucscreen e PC) É possível "
+"ajustar manualmente a direção do vento pressionando a tecla para cima/para "
+"baixo enquanto o InfoBox estiver ativo."
 
 #: src/InfoBoxes/Content/Factory.cpp:286 src/InfoBoxes/Content/Factory.cpp:287
 msgid "AA Time"
-msgstr ""
+msgstr "Tempo AA"
 
 #: src/InfoBoxes/Content/Factory.cpp:288
 msgid ""
 "Assigned Area Task time remaining. Goes red when time remaining has expired."
 msgstr ""
+"Tempo de prova AAT restante. Fica vermelho quando o tempo de prova expirar."
 
 #: src/InfoBoxes/Content/Factory.cpp:294
 msgid "AA Distance Max"
-msgstr ""
+msgstr "Máxima distância AA"
 
 #: src/InfoBoxes/Content/Factory.cpp:295
 msgid "AA Dmax"
-msgstr ""
+msgstr "AA Dmax"
 
 #: src/InfoBoxes/Content/Factory.cpp:296
 msgid "Assigned Area Task maximum distance possible for remainder of task."
-msgstr ""
+msgstr "Maxima distância possível para prova AAT restante."
 
 #: src/InfoBoxes/Content/Factory.cpp:302
 msgid "AA Distance Min"
-msgstr ""
+msgstr "Mínima distância AA"
 
 #: src/InfoBoxes/Content/Factory.cpp:303
 msgid "AA Dmin"
-msgstr ""
+msgstr "AA Dmin"
 
 #: src/InfoBoxes/Content/Factory.cpp:304
 msgid "Assigned Area Task minimum distance possible for remainder of task."
-msgstr ""
+msgstr "Mínima distância possível para prova AAT restante."
 
 #: src/InfoBoxes/Content/Factory.cpp:310
 msgid "AA Speed Max"
-msgstr ""
+msgstr "Velocidade máxima AA"
 
 #: src/InfoBoxes/Content/Factory.cpp:311
 msgid "AA Vmax"
-msgstr ""
+msgstr "AA Vmax"
 
 #: src/InfoBoxes/Content/Factory.cpp:312
 msgid ""
 "Assigned Area Task average speed achievable if flying maximum possible "
 "distance remaining in minimum AAT time."
 msgstr ""
+"Velocidade média atingível se a máxima distância para prova AAT restante for "
+"voada."
 
 #: src/InfoBoxes/Content/Factory.cpp:318
 msgid "AA Speed Min"
@@ -647,6 +691,7 @@ msgid ""
 "Assigned Area Task average speed achievable if flying minimum possible "
 "distance remaining in minimum AAT time."
 msgstr ""
+"Velocidade média na prova de área se a distância mínima restante for voada."
 
 #: src/InfoBoxes/Content/Factory.cpp:326
 msgid "Airspeed IAS"
@@ -654,34 +699,36 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:327
 msgid "V IAS"
-msgstr ""
+msgstr "V IAS"
 
 #: src/InfoBoxes/Content/Factory.cpp:328
 msgid ""
 "Indicated Airspeed reported by a supported external intelligent vario."
-msgstr ""
+msgstr "Velocidade indicada reportada por um vario digital externo."
 
 #: src/InfoBoxes/Content/Factory.cpp:334
 msgid "Pressure Altitude"
-msgstr ""
+msgstr "Altitude de pressão"
 
 #: src/InfoBoxes/Content/Factory.cpp:335
 msgid "H Baro"
-msgstr ""
+msgstr "A Baro"
 
 #: src/InfoBoxes/Content/Factory.cpp:336
 msgid ""
 "This is the barometric altitude obtained from a GPS equipped with pressure "
 "sensor, or a supported external intelligent vario."
 msgstr ""
+"Altitude barométrica obtida de um GPS equipado com sensor de pressão ou com "
+"um vario digital externo."
 
 #: src/InfoBoxes/Content/Factory.cpp:342
 msgid "Speed MacCready"
-msgstr ""
+msgstr "Velocidade MacCready"
 
 #: src/InfoBoxes/Content/Factory.cpp:343
 msgid "V Mc"
-msgstr ""
+msgstr "V Mc"
 
 #: src/InfoBoxes/Content/Factory.cpp:344
 msgid ""
@@ -689,10 +736,13 @@ msgid ""
 "cruise flight mode, this speed-to-fly is calculated for maintaining "
 "altitude. In final glide mode, this speed-to-fly is calculated for descent."
 msgstr ""
+"Velocidade speed-to-fly de MacCready que otimiza o vôo até o próximo ponto. "
+"Em modo de cruzeiro, essa velocidade é calculada para manter a altitude. No "
+"modo planeio final é calculada para descida."
 
 #: src/InfoBoxes/Content/Factory.cpp:350
 msgid "Percentage climb"
-msgstr ""
+msgstr "Porcentagem girando"
 
 #: src/InfoBoxes/Content/Factory.cpp:351
 #, c-format
@@ -704,32 +754,36 @@ msgid ""
 "Percentage of time spent in climb mode. These statistics are reset upon "
 "starting the task."
 msgstr ""
+"Porcentagem do tempo girando térmicas. Essa estatística é zerada quando "
+"começa a prova."
 
 #: src/InfoBoxes/Content/Factory.cpp:358
 msgid "Time of flight"
-msgstr ""
+msgstr "Tempo de vôo"
 
 #: src/InfoBoxes/Content/Factory.cpp:359
 msgid "Time flt"
-msgstr ""
+msgstr "Tempo Vôo"
 
 #: src/InfoBoxes/Content/Factory.cpp:360
 msgid "Time elapsed since takeoff was detected."
-msgstr ""
+msgstr "Tempo decorrido desde que a decolagem foi detectada."
 
 #: src/InfoBoxes/Content/Factory.cpp:366
 msgid "G load"
-msgstr ""
+msgstr "Carga G"
 
 #: src/InfoBoxes/Content/Factory.cpp:367
 msgid "G"
-msgstr ""
+msgstr "G"
 
 #: src/InfoBoxes/Content/Factory.cpp:368
 msgid ""
 "Magnitude of G loading reported by a supported external intelligent vario. "
 "This value is negative for pitch-down manoeuvres."
 msgstr ""
+"Carga G reportada por um vario digital externo suportado. Negativo em "
+"manobras pitch-down."
 
 #: src/InfoBoxes/Content/Factory.cpp:374
 msgid "Next LD"
@@ -749,14 +803,21 @@ msgid ""
 "height required to reach the waypoint by the excess energy height of the "
 "glider if its true airspeed is greater than the MacCready and best LD speeds."
 msgstr ""
+"Razão de planeio necessária para alcançar o próximo ponto de virada. É a "
+"distância para o próximo ponto dividida pela altura requerida, descontada a "
+"altura de segurança. Valores negativos indicam que é necessário subir. Se a "
+"altura requerida for próxima de zero o valor mostrado será '---'. O cálculo "
+"pode ser otimista porque reduz a altura requerida pela energia do planador "
+"se a velocidade verdadeira for maior que as velocidades de MacCready e de "
+"melhor planeio."
 
 #: src/InfoBoxes/Content/Factory.cpp:382
 msgid "Time local"
-msgstr ""
+msgstr "Hora Local"
 
 #: src/InfoBoxes/Content/Factory.cpp:383
 msgid "Time loc"
-msgstr ""
+msgstr "Horal Local"
 
 #: src/InfoBoxes/Content/Factory.cpp:384
 msgid "GPS time expressed in local time zone."
